--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,6 +16,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.43.3",
+    "react-uuid": "^2.0.0",
+    "sweetalert2": "^11.7.3",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.2"
   },
