--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -11,9 +11,10 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "strictNullChecks": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -21,6 +22,6 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src","e2e"
+    "src"
   ]
 }
