--- a/restapi/package.json
+++ b/restapi/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.2",
     "express-prom-bundle": "^6.6.0",
     "express-validator": "^6.14.2",
-    "prom-client": "^14.1.1"
+    "mongoose": "^7.0.0",
+    "prom-client": "^14.1.1",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -22,6 +24,7 @@
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.1",
     "jest": "^29.3.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.4",
