--- a/restapi/package.json
+++ b/restapi/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.2",
     "express-prom-bundle": "^6.6.0",
     "express-validator": "^6.14.2",
-    "prom-client": "^14.1.1"
+    "prom-client": "^14.1.1",
+    "mongoose": "^5.4.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
