--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,7 +19,6 @@
     "react-router-dom": "^6.8.2",
     "react-uuid": "^2.0.0",
     "sweetalert2": "^11.7.3",
-    "typescript": "^4.9.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -60,6 +59,9 @@
     "react-scripts": "5.0.0",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "^29.0.4",
-    "ts-node-dev": "^2.0.0"
+    "ts-loader": "^9.4.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.5",
+    "webpack": "^5.76.1"
   }
 }
