--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -4,7 +4,7 @@
         "lib": [
             "dom",
             "dom.iterable",
-            "esnext"
+            "esnext",
         ],
         "allowJs": true,
         "skipLibCheck": true,
@@ -19,9 +19,10 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
     },
     "include": [
-        "src"
+        "src",
+        "../restapi/src/facade.ts"
     ]
 }
