--- a/restapi/package.json
+++ b/restapi/package.json
@@ -1,7 +1,6 @@
 {
     "name": "restapi",
     "version": "1.0.0",
-    "type": "module",
     "scripts": {
         "start": "ts-node-dev ./server.ts",
         "test": "cd tests && jest --runInBand"
@@ -14,10 +13,10 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-prom-bundle": "^6.6.0",
-        "express-validator": "^6.14.2",
-        "mongoose": "^7.0.0",
+        "express-validator": "^6.15.0",
+        "mongoose": "^7.0.1",
         "prom-client": "^14.1.1",
-        "typeorm": "^0.3.12"
+        "sessionstorage-for-nodejs": "^1.0.2"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
@@ -25,7 +24,6 @@
         "@types/jest": "^29.2.5",
         "@types/node": "^18.11.18",
         "@types/supertest": "^2.0.12",
-        "@types/uuid": "^9.0.1",
         "jest": "^29.3.1",
         "supertest": "^6.3.3",
         "ts-jest": "^29.0.4",
