--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,7 +4,12 @@
     "dependencies": {
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
+        "@fortawesome/fontawesome-svg-core": "^6.3.0",
+        "@fortawesome/free-regular-svg-icons": "^6.3.0",
+        "@fortawesome/free-solid-svg-icons": "^6.3.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@mui/icons-material": "^5.11.11",
+        "@mui/lab": "^5.0.0-alpha.123",
         "@mui/material": "^5.11.11",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
@@ -12,6 +17,7 @@
         "@types/node": "^18.11.18",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
+        "babel-plugin-macros": "^3.1.0",
         "express": "^4.18.2",
         "express-validator": "^6.15.0",
         "react": "^17.0.2",
