--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,14 +15,15 @@
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
         "@types/node": "^18.11.18",
-        "@types/react": "^17.0.37",
-        "@types/react-dom": "^17.0.11",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
         "babel-plugin-macros": "^3.1.0",
         "express": "^4.18.2",
         "express-validator": "^6.15.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
         "react-hook-form": "^7.43.3",
+        "react-leaflet": "^4.2.1",
         "react-router-dom": "^6.8.2",
         "react-uuid": "^2.0.0",
         "sweetalert2": "^11.7.3",
@@ -59,6 +60,7 @@
         "@types/expect-puppeteer": "^4.4.7",
         "@types/express": "^4.17.15",
         "@types/jest": "^29.2.5",
+        "@types/leaflet": "^1.9.3",
         "@types/puppeteer": "^5.4.4",
         "expect-puppeteer": "^6.0.2",
         "jest-cucumber": "^3.0.1",
