--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,6 +8,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.3.0",
         "@fortawesome/free-solid-svg-icons": "^6.3.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@hookform/resolvers": "^2.9.11",
         "@mui/icons-material": "^5.11.11",
         "@mui/lab": "^5.0.0-alpha.123",
         "@mui/material": "^5.11.11",
@@ -25,9 +26,11 @@
         "react-hook-form": "^7.43.3",
         "react-router-dom": "^6.8.2",
         "react-uuid": "^2.0.0",
+        "react-window": "^1.8.8",
         "sweetalert2": "^11.7.3",
         "typescript": "^4.9.4",
-        "web-vitals": "^2.1.2"
+        "web-vitals": "^2.1.2",
+        "yup": "^1.0.2"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -60,6 +63,7 @@
         "@types/express": "^4.17.15",
         "@types/jest": "^29.2.5",
         "@types/puppeteer": "^5.4.4",
+        "@types/react-window": "^1.8.5",
         "expect-puppeteer": "^6.0.2",
         "jest-cucumber": "^3.0.1",
         "jest-puppeteer": "^6.0.3",
