--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,7 @@
         "babel-plugin-macros": "^3.1.0",
         "express": "^4.18.2",
         "express-validator": "^6.15.0",
+        "node-sessionstorage": "^1.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.43.3",
