--- a/restapi/package.json
+++ b/restapi/package.json
@@ -1,35 +1,37 @@
 {
-  "name": "restapi",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "ts-node-dev ./server.ts",
-    "test": "cd tests && jest --runInBand"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-prom-bundle": "^6.6.0",
-    "express-validator": "^6.15.0",
-    "mongoose": "^7.0.1",
-    "prom-client": "^14.1.1",
-    "sessionstorage-for-nodejs": "^1.0.2"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.15",
-    "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.18",
-    "@types/supertest": "^2.0.12",
-    "jest": "^29.3.1",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.0.4",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
-  }
+    "name": "restapi",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "ts-node-dev ./server.ts",
+        "test": "cd tests && jest --runInBand"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.20.1",
+        "cloudinary": "^1.35.0",
+        "cloudinary-client": "^0.0.1",
+        "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "express-prom-bundle": "^6.6.0",
+        "express-validator": "^6.15.0",
+        "mongoose": "^7.0.1",
+        "prom-client": "^14.1.1",
+        "sessionstorage-for-nodejs": "^1.0.2"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.15",
+        "@types/jest": "^29.2.5",
+        "@types/node": "^18.11.18",
+        "@types/supertest": "^2.0.12",
+        "jest": "^29.3.1",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.0.4",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^4.9.4"
+    }
 }
