--- a/webapp/package.json
+++ b/webapp/package.json
@@ -65,6 +65,7 @@
         "@types/jest": "^29.2.5",
         "@types/puppeteer": "^5.4.4",
         "@types/react-window": "^1.8.5",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "expect-puppeteer": "^6.0.2",
         "jest-cucumber": "^3.0.1",
         "jest-puppeteer": "^6.0.3",
