Add some performance updates

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,7 @@
         "@types/react-dom": "^17.0.11",
         "babel-plugin-macros": "^3.1.0",
         "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "express-validator": "^6.15.0",
         "node-sessionstorage": "^1.0.0",
         "react": "^17.0.2",
@@ -28,6 +29,7 @@
         "react-router-dom": "^6.8.2",
         "react-uuid": "^2.0.0",
         "react-window": "^1.8.8",
+        "sessionstorage-for-nodejs": "^1.0.2",
         "sweetalert2": "^11.7.3",
         "typescript": "^4.9.4",
         "web-vitals": "^2.1.2",
