--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,18 +16,19 @@
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
         "@types/node": "^18.11.18",
-        "@types/react": "^18.0.0",
-        "@types/react-dom": "^18.0.0",
+        "@types/react": "^17.0.37",
+        "@types/react-dom": "^17.0.11",
         "babel-plugin-macros": "^3.1.0",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "express-validator": "^6.15.0",
-        "node-sessionstorage": "^1.0.0",
         "leaflet": "^1.9.3",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "node-sessionstorage": "^1.0.0",
+        "react": "^17.0.2",
+        "react-async": "^10.0.1",
+        "react-dom": "^17.0.2",
         "react-hook-form": "^7.43.3",
-        "react-leaflet": "^4.2.1",
+        "react-leaflet": "^3.0.0",
         "react-router-dom": "^6.8.2",
         "react-uuid": "^2.0.0",
         "react-window": "^1.8.8",
