--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
+    "@inrupt/solid-ui-react": "^2.8.2",
     "uuid": "^9.0.0",
     "yup": "^1.0.2"
   }
