Segunda versión de PodManager usando JSON-LD

--- a/restapi/package.json
+++ b/restapi/package.json
@@ -21,6 +21,7 @@
         "express": "^4.18.2",
         "express-prom-bundle": "^6.6.0",
         "express-validator": "^6.15.0",
+        "jsonld": "^8.1.1",
         "mongoose": "^7.0.1",
         "node-sessionstorage": "^1.0.0",
         "prom-client": "^14.1.1",
@@ -31,6 +32,7 @@
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.15",
         "@types/jest": "^29.2.5",
+        "@types/jsonld": "^1.5.8",
         "@types/node": "^18.11.18",
         "@types/supertest": "^2.0.12",
         "jest": "^29.3.1",
