--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,8 @@
         "babel-plugin-macros": "^3.1.0",
         "express": "^4.18.2",
         "express-validator": "^6.15.0",
+        "jsonld": "^8.1.1",
+        "leaflet": "^1.9.3",
         "node-sessionstorage": "^1.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -63,6 +65,8 @@
         "@types/expect-puppeteer": "^4.4.7",
         "@types/express": "^4.17.15",
         "@types/jest": "^29.2.5",
+        "@types/jsonld": "^1.5.8",
+        "@types/leaflet": "^1.9.3",
         "@types/puppeteer": "^5.4.4",
         "@types/react-window": "^1.8.5",
         "eslint-plugin-react-hooks": "^4.6.0",
