--- a/webapp/package.json
+++ b/webapp/package.json
@@ -26,6 +26,7 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "express-validator": "^6.15.0",
+        "jsonld": "^8.1.1",
         "leaflet": "^1.9.3",
         "node-sessionstorage": "^1.0.0",
         "react": "^17.0.2",
@@ -73,6 +74,7 @@
         "@types/expect-puppeteer": "^4.4.7",
         "@types/express": "^4.17.15",
         "@types/jest": "^29.2.5",
+        "@types/jsonld": "^1.5.8",
         "@types/leaflet": "^1.9.3",
         "@types/puppeteer": "^5.4.4",
         "@types/react-window": "^1.8.5",
