--- a/webapp/package.json
+++ b/webapp/package.json
@@ -22,6 +22,7 @@
         "@types/node": "^18.11.18",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
+        "animate.css": "^4.1.1",
         "babel-plugin-macros": "^3.1.0",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
