markers update using redux

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,6 +16,7 @@
         "@mui/icons-material": "^5.11.11",
         "@mui/lab": "^5.0.0-alpha.123",
         "@mui/material": "^5.11.11",
+        "@reduxjs/toolkit": "^1.9.3",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
@@ -34,9 +35,11 @@
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.43.3",
         "react-leaflet": "^3.2.5",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.2",
         "react-uuid": "^2.0.0",
         "react-window": "^1.8.8",
+        "redux": "^4.2.1",
         "sessionstorage-for-nodejs": "^1.0.2",
         "solid-auth-client": "^2.5.6",
         "sweetalert2": "^11.7.3",
