--- a/webapp/package.json
+++ b/webapp/package.json
@@ -24,9 +24,11 @@
         "@types/react-dom": "^17.0.11",
         "animate.css": "^4.1.1",
         "babel-plugin-macros": "^3.1.0",
+        "circular-json": "^0.5.9",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "express-validator": "^6.15.0",
+        "flatted": "^3.2.7",
         "jsonld": "^8.1.1",
         "leaflet": "^1.9.3",
         "node-sessionstorage": "^1.0.0",
