first version of photo upload

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -2,6 +2,8 @@
     "name": "webapp",
     "version": "0.1.0",
     "dependencies": {
+        "@cloudinary/react": "^1.11.2",
+        "@cloudinary/url-gen": "^1.10.0",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@fortawesome/fontawesome-svg-core": "^6.3.0",
