--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ yarn-error.log*
 #documentation build does not go into master
 docs/build
 
+#API Keys
+webapp/src/utils/cloudinary/apiKeyCloudinary.ts
