--- a/webapp/package.json
+++ b/webapp/package.json
@@ -48,6 +48,7 @@
         "solid-auth-client": "^2.5.6",
         "sweetalert2": "^11.7.3",
         "typescript": "^4.9.4",
+        "uuid": "^9.0.0",
         "web-vitals": "^2.1.2",
         "yup": "^1.0.2"
     },
