--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@hookform/resolvers": "^2.9.11",
     "cloudinary": "^1.36.1",
     "cloudinary-react": "^1.8.1",
+    "dotenv": "^16.0.3",
     "uuid": "^9.0.0",
     "yup": "^1.0.2"
   }
