--- a/restapi/package.json
+++ b/restapi/package.json
@@ -9,12 +9,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.0",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.1",
         "cloudinary": "^1.35.0",
         "cloudinary-client": "^0.0.1",
-        "bcrypt": "^5.1.0",
-        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-prom-bundle": "^6.6.0",
         "express-validator": "^6.15.0",
