--- a/webapp/package.json
+++ b/webapp/package.json
@@ -29,6 +29,7 @@
         "animate.css": "^4.1.1",
         "babel-plugin-macros": "^3.1.0",
         "circular-json": "^0.5.9",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "express-validator": "^6.15.0",
