--- a/webapp/package.json
+++ b/webapp/package.json
@@ -59,7 +59,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --coverage",
-        "test:e2e": "start-server-and-test 'npm --prefix ../restapi start' http://localhost:5000/api/users/list prod 3000 'cd e2e && jest'",
+        "test:e2e": "start-server-and-test 'npm --prefix ../restapi start' http://localhost:5000/api/test prod 3000 'jest --rootDir=e2e --config=./e2e/jest.config.ts'",
         "eject": "react-scripts eject",
         "prod": "ts-node-dev ./server.ts"
     },
@@ -93,9 +93,10 @@
         "@types/solid-auth-client": "^2.4.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "expect-puppeteer": "^6.0.2",
+        "jest": "^29.5.0",
         "jest-cucumber": "^3.0.1",
-        "jest-puppeteer": "^6.0.3",
-        "puppeteer": "^13.0.1",
+        "jest-puppeteer": "^6.2.0",
+        "puppeteer": "^13.7.0",
         "react-scripts": "5.0.0",
         "start-server-and-test": "^1.14.0",
         "ts-jest": "^29.1.0",
