jest.config.ts test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.language=ts
 sonar.projectName=lomap_es2c
 sonar.projectVersion=1.0.4
 
-sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts
+sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts, restapi/server.ts
 sonar.sources=webapp/src/components,restapi
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=node_modules/**
