--- a/restapi/package.json
+++ b/restapi/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "scripts": {
         "start": "ts-node-dev ./server.ts",
-        "test": "cd tests && jest --runInBand"
+        "test": "cd tests && jest --runInBand",
+        "prod": "ts-node ./server.ts"
     },
     "keywords": [],
     "author": "",
