--- a/webapp/package.json
+++ b/webapp/package.json
@@ -62,15 +62,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --coverage",
-        "test:e2e": "start-server-and-test 'npm --prefix ../restapi start' http://localhost:5000/api/users/list prod 3000 'cd e2e && jest'",
+        "test:e2e": "start-server-and-test 'npm --prefix ../restapi run prod' http://localhost:5000/api/users/list prod 3000 \"cd e2e && jest\"",
         "eject": "react-scripts eject",
-        "prod": "ts-node-dev ./server.ts"
-    },
-    "jest": {
-        "collectCoverageFrom": [
-            "src/auth/**.tsx",
-            "src/components/**.tsx"
-        ]
+        "prod": "ts-node ./server.ts"
     },
     "eslintConfig": {
         "extends": [
