--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectName=lomap_es2c
 sonar.projectVersion=1.0.4
 
 sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts
-sonar.sources=webapp/src/components,restapi
+sonar.sources=webapp/src/components,restapi/src
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=node_modules/**
 sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
