--- a/restapi/Dockerfile
+++ b/restapi/Dockerfile
@@ -4,4 +4,8 @@ COPY . /app
 WORKDIR /app
 #Install the dependencies
 RUN npm install
+
+ARG DATABASE_URL="DATABASE_URL"
+ENV DATABASE_URL=$DATABASE_URL
+
 CMD [ "npm", "start" ]
