--- a/restapi/package.json
+++ b/restapi/package.json
@@ -33,6 +33,7 @@
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.0",
         "ts-node-dev": "^2.0.0",
-        "typescript": "^4.9.4"
+        "typescript": "^4.9.4",
+        "jest-sonar-reporter": "2.0.0"
     }
 }
