attempt to set .env variables

--- a/restapi/Dockerfile
+++ b/restapi/Dockerfile
@@ -5,7 +5,13 @@ WORKDIR /app
 #Install the dependencies
 RUN npm install
 
-ARG DATABASE_URL="DATABASE_URL"
-ENV DATABASE_URL=$DATABASE_URL
+ARG DATABASE_USER="DATABASE_USER"
+ENV DATABASE_USER=$DATABASE_USER
+
+ARG DATABASE_PASSWORD="DATABASE_PASSWORD"
+ENV DATABASE_PASSWORD=$DATABASE_PASSWORD
+
+ARG DATABASE_NAME="DATABASE_NAME"
+ENV DATABASE_NAME=$DATABASE_NAME
 
 CMD [ "npm", "start" ]
