--- a/.github/workflows/lomap_es2c.yml
+++ b/.github/workflows/lomap_es2c.yml
@@ -34,7 +34,13 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
-                  node-version: 18
+                  node-version: 18´
+            - name: Create env
+                run: |
+                    cd restapi
+                    touch .env
+                    echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
+                    cat .env
             - run: npm --prefix webapp install
             - run: npm --prefix restapi install
             - run: npm --prefix webapp run build
@@ -58,6 +64,8 @@ jobs:
                   buildargs: API_URI
     docker-push-restapi:
         name: Push restapi Docker Image to GitHub Packages
+        env:
+            DATABASE_USER: ${{ secrets.DATABASE_URL }}
         runs-on: ubuntu-latest
         env:
             DATABASE_URL: ${{ secrets.DATABASE_URL }}
