--- a/restapi/package.json
+++ b/restapi/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "scripts": {
         "start": "ts-node-dev ./server.ts",
-        "test": "cd tests && jest --runInBand"
+        "test": "cd tests && jest --runInBand --coverage",
+        "sonar": "sonar-scanner"
     },
     "keywords": [],
     "author": "",
@@ -30,7 +31,9 @@
         "@types/jest": "^29.5.0",
         "@types/node": "^18.11.18",
         "@types/supertest": "^2.0.12",
-        "jest": "^29.3.1",
+        "jest": "^29.5.0",
+        "jest-cli": "^29.5.0",
+        "sonarqube-scanner": "^3.0.1",
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.0",
         "ts-node-dev": "^2.0.0",
