--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,4 +10,4 @@ sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts
 sonar.sources=webapp/src/components,restapi
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=node_modules/**
-sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
+sonar.typescript.lcov.reportPaths=**/restapi/coverage/lcov.info
