--- a/restapi/Dockerfile
+++ b/restapi/Dockerfile
@@ -5,13 +5,7 @@ WORKDIR /app
 #Install the dependencies
 RUN npm install
 
-ARG DATABASE_USER="DATABASE_USER"
-ENV DATABASE_USER=$DATABASE_USER
-
-ARG DATABASE_PASSWORD="DATABASE_PASSWORD"
-ENV DATABASE_PASSWORD=$DATABASE_PASSWORD
-
-ARG DATABASE_NAME="DATABASE_NAME"
-ENV DATABASE_NAME=$DATABASE_NAME
+ARG DATABASE_URL="DATABASE_USER"
+ENV DATABASE_URL=$DATABASE_URL
 
 CMD [ "npm", "start" ]
