--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -12,5 +12,5 @@ ENV REACT_APP_API_URI=$API_URI
 RUN npm run build
 
 #Execute npm run prod to run the server
-#CMD [ "npm", "run", "prod" ]
-CMD ["npm", "start"]
+CMD [ "npm", "run", "prod" ]
+#CMD ["npm", "start"]
