Probando para el coverage para sonar

--- a/restapi/package.json
+++ b/restapi/package.json
@@ -5,6 +5,19 @@
         "start": "ts-node-dev ./server.ts",
         "test": "cd tests && jest --coverage"
     },
+
+    "jest": {
+        "collectCoverage": true,
+        "coverageReporters": [
+            "json",
+            "lcov",
+            "text",
+            "clover"
+        ],
+        "coverageDirectory": "coverage"
+    }
+
+    ,
     "keywords": [],
     "author": "",
     "license": "ISC",
