another fix related to sonar

--- a/.github/workflows/lomap_es2c.yml
+++ b/.github/workflows/lomap_es2c.yml
@@ -25,7 +25,7 @@ jobs:
             - run: npm --prefix webapp test --coverage --watchAll
             - run: npm --prefix restapi test --coverage --watchAll
             - name: Analyze with SonarCloud
-              uses: sonarsource/sonarcloud-github-action@master
+              uses: sonarsource/sonarcloud-github-action@v1.8
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
