--- a/.github/workflows/lomap_es2c.yml
+++ b/.github/workflows/lomap_es2c.yml
@@ -56,7 +56,7 @@ jobs:
             - name: Publish to Registry
               uses: elgohr/Publish-Docker-Github-Action@v5
               env:
-                API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
+                API_URI: https://${{ secrets.DEPLOY_HOST }}:5000/api
               with:
                 name: arquisoft/lomap_es2c/webapp
                 username: ${{ github.actor }}
