attempt to process https requests in restapi

--- a/.github/workflows/lomap_es2c.yml
+++ b/.github/workflows/lomap_es2c.yml
@@ -42,6 +42,8 @@ jobs:
                 cd restapi
                 touch .env
                 echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
+                echo SSL_CERT=${{ secrets.SSL_CERT }} >> .env
+                echo SSL_PRIVKEY=${{ secrets.SSL_PRIVKEY }} >> .env
                 cat .env
             - run: npm --prefix webapp install
             - run: npm --prefix restapi install
@@ -56,7 +58,7 @@ jobs:
             - name: Publish to Registry
               uses: elgohr/Publish-Docker-Github-Action@v5
               env:
-                API_URI: http://${{ secrets.DEPLOY_HOST }}:5000/api
+                API_URI: https://${{ secrets.DEPLOY_HOST }}:5000/api
               with:
                 name: arquisoft/lomap_es2c/webapp
                 username: ${{ github.actor }}
@@ -68,6 +70,8 @@ jobs:
         name: Push restapi Docker Image to GitHub Packages
         env:
             DATABASE_USER: ${{ secrets.DATABASE_URL }}
+            SSL_CERT: ${{ secrets.SSL_CERT }}
+            SSL_PRIVKEY: ${{ secrets.SSL_PRIVKEY }}
         runs-on: ubuntu-latest
         needs: [e2e-tests]
         steps:
@@ -80,7 +84,7 @@ jobs:
                 password: ${{ secrets.DOCKER_PUSH_TOKEN }}
                 registry: ghcr.io
                 workdir: restapi
-                buildargs: DATABASE_URL
+                buildargs: DATABASE_URL,SSL_CERT,SSL_PRIVKEY
     deploy:
         name: Deploy over SSH
         runs-on: ubuntu-latest
