--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,5 +9,5 @@ sonar.projectVersion=1.0.4
 sonar.coverage.exclusions=**/*.test.tsx,**/*.test.ts
 sonar.sources=webapp/src/components,restapi
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=node_modules/**
+sonar.exclusions=node_modules/**,restapi/server.ts
 sonar.typescript.lcov.reportPaths=**/coverage/lcov.info
