--- a/restapi/package.json
+++ b/restapi/package.json
@@ -2,9 +2,8 @@
     "name": "restapi",
     "version": "1.0.0",
     "scripts": {
-        "start": "ts-node-dev ./server.ts",
-        "test": "jest --runInBand --coverage",
-        "pretest:e2e": "dotenv --dotenv=./.env export SSL_PRIVKEY=$SSL_PRIVKEY && export SSL_CERT=$SSL_CERT"
+        "start": "dotenv --dotenv=./.env node -r dotenv/config ts-node-dev ./server.ts",
+        "test": "jest --runInBand --coverage"
     },
     "keywords": [],
     "author": "",
