--- a/webapp/package.json
+++ b/webapp/package.json
@@ -40,6 +40,7 @@
         "leaflet": "^1.9.3",
         "lodash": "^4.17.21",
         "node-sessionstorage": "^1.0.0",
+        "puppeteer-core": "^19.11.1",
         "react": "^17.0.2",
         "react-async": "^10.0.1",
         "react-dom": "^17.0.2",
